@@ -54,31 +54,36 @@ body {
 
 /* Link Style ---------------------------------------------- */
 a {
-    color: #585f5f;
+    color: #8f9a9a;
     text-decoration: underline; 
 }
 a:visited {
-    color: #585f5f;
+    color: #8f9a9a;
 }
 a:active {
     color: #1900ff; 
 }
+#visualizationArchive a, #colloquiumPoster a, #guerillaUrbanism a {
+    color: #585f5f !important;
+}
+#visualizationArchive a, #colloquiumPoster a, #guerillaUrbanism a:visited {
+    color: #585f5f !important;
+}
 
 
-
-
-/* Sidebar styles */
+/* Sidebar ----------------------------------------- */
 #sidebar {
     position: absolute;
     left: 0;
     top: 0;
-    width: 360px; /* Full width when expanded */
+    width: 360px;
     height: 100%;
-    background-color: rgba(255, 255, 255);
+    background-color: rgba(255, 255, 255, 0.65);
+    backdrop-filter: blur(10px); 
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.05);
     z-index: 1000;
-    transform: translateX(0); /* Expanded position */
-    transition: transform 0.3s ease; /* Smooth transition for sliding */
+    transform: translateX(0);
+    transition: transform 0.3s ease;
     border-right: 1.5px solid #bfcdcd; 
 }
 /* Collapsed state */
@@ -115,12 +120,12 @@ a:active {
 /* Logo styles */
 #logo {
     display: block; /* Ensures the image takes up space and doesn't inline with other content */
-    width: 45%; /* Makes the logo responsive to the sidebar width */
-    height: auto; /* Maintains the aspect ratio of the image */
-    padding-top: 23px;
+    width: 45%; 
+    height: auto;
+    padding-top: 26px;
     padding-left: 30px;
     padding-bottom: 15px;
-    box-sizing: border-box; /* Ensures padding is included in width calculation */
+    box-sizing: border-box;
 }
 
 
@@ -222,36 +227,38 @@ a:active {
 }
 
 .active-line {
-    height: 3px; /* Height of the line */
-    background-color: black; /* Color of the line */
-    transition: left 0.3s ease, width 0.3s ease; /* Smooth transition for movement */
+    height: 3px; 
+    background-color: black; 
+    transition: left 0.3s ease, width 0.3s ease; 
     position: absolute;
-    bottom: -5px; /* Position it below the buttons */
-    opacity: 1; /* Ensure the line is visible */
+    bottom: -5px; 
+    opacity: 1; 
 }
 
 .active-line.hidden {
-    opacity: 0; /* To hide the line initially if you want */
+    opacity: 0; 
 }
 
 
 .options-icon {
-    width: 13px; /* Adjust size as needed */
-    height: 13px; /* Adjust size as needed */
-    margin-left: 15px; /* Space between the button and the icon */
-    cursor: pointer; /* Change cursor to pointer on hover */
-    transition: fill 0.3s ease; /* Smooth transition */
+    width: 13px; 
+    height: 13px; 
+    margin-left: 15px; 
+    cursor: pointer; 
+    transition: fill 0.3s ease; 
     filter: invert(0);
 }
 .options-icon:hover {
-    filter: brightness(0) saturate(100%) invert(0%); /* Change to black on hover */
+    filter: brightness(0) saturate(100%) invert(0%);
 }
 
 
 .navButtonAContainer,
 .navButtonBContainer,
 .navButtonCContainer {
-    margin: 0;
+    margin: 0 auto;
+    width: 290px;
+    justify-content: space-between;
     padding: 0; 
     display: flex; 
     margin-left: 35px; 
@@ -259,6 +266,7 @@ a:active {
 
 
 .nav-button-2 {
+    flex:1;
     display: inline;
     padding: 5px 18.5px;
     margin: 0;
@@ -269,9 +277,8 @@ a:active {
     transition: background-color 0.3s ease; 
     font-weight: 400;
     position: relative;
-    background-color: #e6ecec; 
+    background-color: rgba(222, 229, 229, 0.5); 
     border: 1.5px solid #bfcdcd; 
-    border-bottom: transparent;
 }
 #legendButton, #dataButton, #pastButton {
     border-top-left-radius: 6px; 
@@ -280,22 +287,13 @@ a:active {
     border-top-right-radius: 6px; 
 }
 .nav-button-2:hover {
-    background-color: white
+    background-color: transparent
 }
 .nav-button-2.active {
-    background-color: white;
+    background-color: transparent;
+    border-bottom: transparent;
     z-index: 1005;
     position: relative;
-}
-.nav-button-2.active::after {
-    content: '';
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
-    height: 2px;
-    background-color: rgb(255, 255, 255);
-    z-index: 1003;
 }
 
 
@@ -308,12 +306,25 @@ a:active {
     margin: 0 auto;
 
 }
-.sidebar-line-2 {
-    width: 100%;
+.sidebar-line-2a {
+    position: absolute;
+    width: 35px;
     border: none;
-    height: 1.5px;
+    height: 1px;
     background-color: #bfcdcd;
-    transform: translateY(-9px);
+    transform: translateY(-9.5px);
+    text-align:left;
+    margin-left: 0;
+}
+.sidebar-line-2b {
+    position: absolute;
+    width: 35px;
+    border: none;
+    height: 1px;
+    background-color: #bfcdcd;
+    transform: translateY(-9.5px) translateX(325px);
+    text-align:left;
+    margin-left: 0;
 }
 
 
@@ -567,7 +578,7 @@ h3 {
 
 
 
-/* Bottom buttons */
+/* Bottom buttons ------------------------------------------*/
 .sidebar-bottom-buttons {
     position: absolute;
     bottom: 0;
@@ -583,7 +594,7 @@ h3 {
     width: 180.75px;
     padding: 12px 0;
     color: #8f9a9a;
-    background-color: rgb(255, 255, 255);
+    background-color: transparent;
     border: 1.5px solid #bfcdcd; 
     border-bottom: none; 
     border-left: none;
